Fixed macOS window controls overlapping tabs #164

--- a/src/scss/User Interface/Bars/titleBar.scss
+++ b/src/scss/User Interface/Bars/titleBar.scss
@@ -11,3 +11,7 @@ body.pt-titlebar-hide-text .titlebar .titlebar-text {
 .is-hidden-frameless:not(.is-fullscreen) .titlebar-button-container.mod-right {
 	background-color: unset;
 }
+
+.mod-windows.is-hidden-frameless:not(.is-fullscreen) .workspace-tabs.mod-top-left-space .workspace-tab-header-container {
+	padding-left: var(--frame-left-space);
+}
