--- a/src/scss/User Interface/workspace.scss
+++ b/src/scss/User Interface/workspace.scss
@@ -118,10 +118,6 @@ body:not(.css-settings-manager) .workspace-split.mod-left-split::before {
 	border-right: var(--window-border);
 }
 
-.is-hidden-frameless:not(.is-fullscreen) .workspace-tabs.mod-top-left-space .workspace-tab-header-container {
-	padding-left: unset;
-}
-
 // [UI] macOS Sidebar Toggle Button fix
 .mod-macos.is-hidden-frameless:not(.is-popout-window) .sidebar-toggle-button.mod-right {
 	padding-right: 2px;
